[SYNCOPE-1418] No more *Context.xml, Spring configuration is all Java