@@ -315,7 +315,7 @@ under the License.
               <configuration>
                 <properties>
                   <cargo.jvmargs>-Xdebug -Djaxb.debug=true -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n
-                    -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC</cargo.jvmargs>
+                    -XX:+CMSClassUnloadingEnabled</cargo.jvmargs>
                 </properties>
               </configuration>
             </configuration>
